2007-01-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/images/Makefile.am
	* plug-ins/imagemap/images/stock-map-info.png
	* plug-ins/imagemap/imap_stock.[ch]: removed custom info icon.

	* plug-ins/imagemap/imap_menu.c: use GTK_STOCK_INFO instead.

	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_default_dialog.c: make dialogs transient
	to the main window and the main window transient to the image window.

2007-01-03  Tor Lillqvist  <tml@novell.com>

	* plug-ins/common/lcms.c (run): Fix mixup in retrieving the
	filename parameter.

2007-01-02  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: fixed order of parameters (pointed out
	by Yoshinori Yamakawa).

2007-01-02  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpratioentry.c: corrected API docs.

2006-12-31  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Don't include malloc.h
	file. Fixes bug #391195.

2006-12-30  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_synthesize_motion): restore old function and
	push a pause/resume to avoid tool redraws from the motion handler.

2006-12-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppropwidgets.c
	(gimp_prop_ratio_entry_notify): compile before you commit :P

2006-12-30  Simon Budig  <simon@gimp.org>

	* libgimpwidgets/gimpratioentry.[ch]: New files implementing a widget
	for entering ratios. Will be improved over time...

	* libgimpwidgets/gimpwidgetstypes.h
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/Makefile.am: changed accordingly.

	* app/widgets/gimppropwidgets.c: use it for the crop/rectangle
	select tools.

2006-12-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: use a GtkMessageDialog to display errors.

	* plug-ins/print/print-settings.c: use g_warning() for problems
	that shouldn't ever happen.

2006-12-29  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpscaletool.c (gimp_scale_tool_size_notify): take